# pico-projects

./: CMakeLists.txt
blink/: CMakeLists.txt  blink.cpp  toggle.cpp  toggle.hh
door_phone/: CMakeLists.txt  blink.cpp  main.cpp
door_phone/algorithms_and_structures/: circular_buffer.h
door_phone/ca_signal_processor/: ca_signal_processor.cpp  ca_signal_processor.hpp  ca_signal_processor_impl.cpp  ca_signal_processor_impl.hpp
door_phone/consent_provider/: consent_provider_impl.cpp  consent_provider_impl.hpp
door_phone/constants/: constants.h
door_phone/hardware_clock/: hardware_clock.cpp  hardware_clock.h
door_phone/interfaces/: adc_reader.h  ca_signal_processor.hpp  clock.h  consent_provider.hpp  electric_lock.hpp  relay_controller.hpp  task.h  time_aware.h
door_phone/relay_controller/: relay_controller_impl.cpp  relay_controller_impl.hpp
door_phone/repeating_timer/: repeating_timer.cpp  repeating_timer.hpp
door_phone/rp2040_adc/: rp2040_adc.cpp  rp2040_adc.hpp
door_phone/tasks/: task_ca_signal_observer.cpp  task_ca_signal_observer.hpp  task_cyw43_blinker.cpp  task_cyw43_blinker.hpp
door_phone/time_aware/: ca_signal_observer.cpp  ca_signal_observer.hpp  cyw43_blinker.cpp  cyw43_blinker.hpp  door_electric_lock.cpp  door_electric_lock.hpp
lcdTest/: CMakeLists.txt  main.c
lcdTest/lib/sdcard/: MMC_SD.c
pico-w-webserver-cgi-ssi/: CMakeLists.txt  main.cpp
picoWSandbox/: CMakeLists.txt  blink.cpp
rtosSandbox/: CMakeLists.txt  main.cpp
touchLCD/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
touchLCD/graphics/bitmap/: bitmap.hpp  bitmap12.cpp  bitmap12.hpp  bitmap16.hpp  colorBitmap.hpp  monochromaticBitmap.cpp  monochromaticBitmap.hpp
touchLCD/graphics/layoutController/: experimentalLayoutController.cpp  experimentalLayoutController.hpp  layoutController.hpp
touchLCD/graphics/utils/: utils.cpp  utils.hpp
touchLCD/lcdController/: lcdDriver.cpp  lcdDriver.hpp
touchLCD/pinDefinitions/: pinDefinitions.cpp  pinDefinitions.hpp
touchLCD/spiDmaDriver/: spiDmaDriver.cpp  spiDmaDriver.hpp
touchLCD/syncSDDriver/: commandList.hpp  sd.cpp  sd.hpp
touchLCD/tasks/: LcdTask.cpp  spi1DmaTask.cpp  tasks.hpp  touchPadTask.cpp
touchLCD/touchController/: touchController.cpp  touchController.hpp
